fix: changed getFirst method to get